--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
   <link rel="stylesheet" href="./style.css">
   <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <style>
+    @font-face {
+      font-family: 'Drip';
+      src: url('fonts/Drip.ttf') format('truetype'),
+        url('fonts/Drip.woff2') format('woff2'),
+        url('fonts/Drip.woff') format('woff');
+      font-weight: normal;
+      font-style: normal;
+    }
 
+    h1,
+    h2,
+    h3,
+    h4 {
+      font-family: 'Drip', system-ui, sans-serif;
+    }
+  </style>
 </head>
 
 <body>
